updated ui whitespace bug

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,4 @@
 .wrapper{
-    height: 100vh;    
     display:flex;
 }
 
@@ -70,7 +69,7 @@ label{
 }
 
 .display-board > div.exchange-rate{
-    margin-top: 1.3em;
+    margin-top: 1.5em;
     font-size: 2.2em;
     text-align: right;
 }
@@ -129,7 +128,7 @@ label{
         }
 
         .display-board > div.exchange{
-            font-size: 2.8em;
+            font-size: 3em;
             padding-top: 1.3em;
             text-align: center;
         }
@@ -139,7 +138,15 @@ label{
             text-align: left;
             margin-top: 1.3em;
             font-size: 1.5em;
-            text-align: right;
+            text-align: center;
+        }
+    }
+    @media (max-width: 30em) and (orientation: landscape) { 
+        .wrapper{
+            height: auto;
+        }
+        .input,.output{
+            height: 100%;
         }
     }
 
